--- a/install.txt
+++ b/install.txt
@@ -1,2 +1,6 @@
 sudo apt install rhvoice-russian
 pip install sounddevice vosk numpy
+
+pactl list sources short
+parecord --device=bluez_source.XX_XX_XX_XX_XX_XX.headset_head_unit test.wav
+paplay test.wav
